--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ body{
     padding: 38px 0 48px;
 }
 
-.header_flex, .footer_flex, .about{
+.header_flex, .footer_flex, .about, .subscribe, .plan_flex{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -54,11 +54,11 @@ body{
 }
 
 .button_orange{
-    background: #FF7143;
+    background: #fd7345;
 }
 
 .button_orange:hover{
-    background: #f67c53;
+    background: #f5825c;
     transition: 500ms; 
 }
 
@@ -104,3 +104,112 @@ body{
     transition: 500ms;   
 }
 
+.subscribe{
+    margin-bottom: 85px;
+}
+.subscribe_title{
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 57px;
+    letter-spacing: -1.56316px;
+    color: #19191B;
+    margin-bottom: 38px;
+}
+
+input{
+    width: 302px;
+    height: 60px;
+    border: 1px solid #7087FF;
+    border-radius: 10px;
+    padding-left: 14px;
+    box-sizing: border-box;
+    margin-right: 39px;
+}
+
+input::placeholder, input{
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: -0.531474px;
+    color: #000000;
+}
+
+input:focus{
+    outline: none;
+}
+
+.plan{
+margin-bottom: 132px;
+}
+
+.plan_title{
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 70px;
+    letter-spacing: -1.87579px;
+    color: #19191B;
+    max-width: 504px;
+    margin-bottom: 110px;
+}
+
+.item{
+    width: 330px;
+    background: #F8F8F8;
+    box-shadow: 0px 32px 34px rgba(255, 112, 59, 0.317827);
+    border-radius: 10px;
+    text-align: center;
+    padding: 34px 0 27px;
+
+}
+
+.item:hover{
+    transition: 500ms;
+    background: #FF7143;
+    box-shadow: 0px 32px 34px rgba(255, 112, 59, 0.317827);
+}
+
+.item_text{
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.562737px;
+    color: #696871;
+}
+
+.item:hover .item_text, .item:hover .item_title, .item:hover .item_li{
+    color: #FFFFFF;
+    transition: 500ms;
+}
+
+.item_title{
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 56px;
+    letter-spacing: -1.03448px;
+    color: #1D293;
+    margin: 22px 0 28px;
+}
+
+.item_title span{
+    font-size: 28px;
+}
+.item_li{
+    list-style: none;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 50px;
+    letter-spacing: -0.531474px;
+    color: #696871;
+}
+
+.button_item{
+    width: 285px;
+    background: #FFFFFF;
+    color: #5454D4;
+    margin-top: 36px;
+}
+
+.item:hover .button_item{
+    background: #9F3919;
+    color: #FFFFFF;
+    transition: 500ms;
+}
